# AutoML-com--Python

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: h2o.ipynb
