[project]
name = "automl-com-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "autokeras>=3.0.0",
    "h2o>=3.46.0.10",
    "ipykernel>=7.2.0",
    "numpy>=1.26.4",
    "pandas>=2.1.4",
    "polars>=1.40.1",
    "pyarrow>=24.0.0",
    "pycaret>=3.3.2",
    "scikit-learn>=1.4.2",
    "tensorflow>=2.18.1",
]
[tool.uv.extra-build-dependencies]
mlbox = ["pip"]
